--- a/HomeSchoolInteraction/html/homeSchool/notice_parentsList.html
+++ b/HomeSchoolInteraction/html/homeSchool/notice_parentsList.html
@@ -66,11 +66,11 @@
 						<div class="mui-input-row mui-checkbox mui-left" style="margin-top: -10px;height: 30px;">
 							<label class="className">{{classModel.clsname}}</label>
 							<input v-model="classModel.flag" name="checkbox1" type="checkbox" @click="clickClass(classModel)">
-						</div>
+						</div>	
 					</div>
 					<div class="flex-container" style="padding-left: 20px;">
 						<div class="mui-input-row mui-checkbox mui-left" v-for="(stuModel,index) in classModel.stuArray">
-							<label class="stuName" style="width: 150px;">{{stuModel.stuname}}</label>
+							<label class="stuName" style="width: 170px;">{{stuModel.stuname}}<a class="" style="color: #ff9966;">[订]</a></label>
 							<input v-model="stuModel.flag" name="checkbox1" type="checkbox" @click="clickStu(classModel,stuModel)">
 						</div>
 					</div>
