--- a/HomeSchoolInteraction/index.html
+++ b/HomeSchoolInteraction/index.html
@@ -35,7 +35,7 @@
 				<span class="mui-icon iconfont icon-kecheng"></span>
 				<span class="mui-tab-label">课程</span>
 			</a>
-			<a class="mui-tab-item" href="html/Course/courseIndex.html">
+			<a class="mui-tab-item" href="html/helpStudy/helpStudyIndex.html">
 				<span class="mui-icon iconfont icon-iconfontbangzhu"></span>
 				<span class="mui-tab-label">助学</span>
 			</a>
@@ -43,6 +43,7 @@
 		<script src="js/mui.min.js"></script>
 		<script src="js/storageKeyName.js"></script>
 		<script src="js/utils/store.js"></script>
+		<script src="js/utils/utils.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			//mui初始化
 			mui.init();
@@ -55,7 +56,7 @@
 
 			var subpages =[];
 			
-				subpages=['html/homeSchool/homeSchoolIndex.html', 'html/sciedu/sciedu_home.html',  'html/Course/courseIndex.html', 'html/Course/courseIndex.html'];
+				subpages=['html/homeSchool/homeSchoolIndex.html', 'html/sciedu/sciedu_home.html',  'html/Course/courseIndex.html', 'html/helpStudy/helpStudyIndex.html'];
 			
 			var subpage_style = {
 				top: '0px',
@@ -110,6 +111,7 @@
 					//若为iOS平台或非首次显示，则直接显示
 					var target =targetTab.indexOf("homeSchoolIndex")==-1;
 					if(authority==false&&target==false){//没有权限且目标页为homeSchoolIndex.html
+//						utils.mOpenWithData("html/login/loginIndex.html", personal);
 							alert('没有该模块权限');
 							return;
 					}
