修改了游客和正式身份跳转逻辑

--- a/HomeSchoolInteraction/html/login/loginIndex.html
+++ b/HomeSchoolInteraction/html/login/loginIndex.html
@@ -219,8 +219,19 @@
 									//											mui.toast(data.RspTxt);
 								}
 							});
-
-							utils.mOpenWithData("../../index.html", personal);
+							
+							
+							var wvs = plus.webview.all();
+							for (var i = 0, len = wvs.length; i < len; i++) {
+					            //关闭除login页面外的其他页面
+								if (wvs[i].getURL().indexOf('homeSchoolIndex.html')!=-1
+								||wvs[i].getURL().indexOf('sciedu_home.html')!=-1
+								||wvs[i].getURL().indexOf('courseIndex.html')!=-1){
+									plus.webview.close(wvs[i]);
+								}
+							}
+							plus.webview.open('../../index.html');
+//							utils.mOpenWithData("../../index.html", personal);
 						} else {
 							mui.toast(data1.RspTxt);
 						}
