--- a/HomeSchoolInteraction/index.html
+++ b/HomeSchoolInteraction/index.html
@@ -111,7 +111,7 @@
 					//若为iOS平台或非首次显示，则直接显示
 					var target =targetTab.indexOf("homeSchoolIndex")==-1;
 					if(authority==false&&target==false){//没有权限且目标页为homeSchoolIndex.html
-//						utils.mOpenWithData("html/login/loginIndex.html", personal);
+						utils.mOpenWithData("html/login/loginIndex.html", personal);
 							alert('没有该模块权限');
 							return;
 					}
