--- a/HomeSchoolInteraction/html/homeSchool/notice_add.html
+++ b/HomeSchoolInteraction/html/homeSchool/notice_add.html
@@ -284,7 +284,7 @@
 			});
 
 			window.addEventListener('selectGradeClass', function(data) {
-				console.log("data" + JSON.stringify(data.detail));
+//				console.log("data" + JSON.stringify(data.detail));
 				var tempData = data.detail;
 				addNoticeContent.gradeStr = tempData.gradeShow;
 				addNoticeContent.classStr = tempData.classShow;
@@ -300,7 +300,7 @@
 			});
 
 			window.addEventListener('selectStudents', function(data) {
-				console.log("data" + JSON.stringify(data.detail));
+//				console.log("data" + JSON.stringify(data.detail));
 				var tempData = data.detail;
 				addNoticeContent.parentsStr = tempData.parentsShow;
 				addNoticeContent.parentArray =  [].concat(tempData.parentsArray);
@@ -321,12 +321,12 @@
 				postDataEncry('ClassStu', enData0, comData0, 0, function(data) {
 					events.closeWaiting();
 					if(data.RspCode == 0) {
-						console.log('data:' + JSON.stringify(data));
+//						console.log('data:' + JSON.stringify(data));
 						if (data.RspData==null) {
-							console.log('qqqqqqqqq');
+//							console.log('qqqqqqqqq');
 							addNoticeContent.parentsStr = '所在班级没有学生';
 						}else{
-							console.log('qqqqqqqqw');
+//							console.log('qqqqqqqqw');
 							addNoticeContent.parentArray = [].concat(data.RspData.clssstus);
 						}
 					} else {
@@ -459,7 +459,7 @@
 					temp0.push(stuModel.stuid);
 					temp1.push(stuModel.stuname);
 					temp2.push(stuModel.stuno);
-					temp3.push(stuModel.stuid);
+					temp3.push('');
 				}
 				if (temp0.length==0) {
 					mui.toast('选择的接收人为空');
@@ -472,11 +472,24 @@
 				} else{
 					addNoticeContent.msgFlag = 0;
 				}
+				//附件名称
+				var encName = '';
+				if (encAddr.length>0) {
+					var tempArray = [];
+					var tempAddr = encAddr.split('|');
+					for (var i = 0; i < tempAddr.length; i++) {
+						var tempModel = tempAddr[i];
+						var temp000 = tempModel.split('/');
+						tempArray.push(temp000[temp000.length - 1]);
+					}
+					encName = tempArray.join('|');
+				}
+//				console.log('encName:'+encName);
 				//1.新增学校通知（同时增加通知未读）
 				var tempData1 = {
 					schoolId: personal.schid, //学校ID，统一部署的时候，学校ID传000000
 					noticeContent: addNoticeContent.content, //内容
-					noticEncName: '', //附件名称，竖杠隔开
+					noticEncName: encName, //附件名称，竖杠隔开
 					noticeEncAddr: encAddr, //附件地址，竖杠隔开
 					smsSync: addNoticeContent.msgFlag, //是否短信同步，先填0
 					sendManId: personal.utid, //发布人ID
@@ -486,7 +499,7 @@
 					receiveManIds: arrayToStr(temp0), //接收人人ID，例如：[“1”,”2”,”3”]
 					receiveManCodes: arrayToStr(temp2), //接收人账号，例如：[“1”,”2”,”3”]
 					receiveManNames: arrayToStr(temp1), //接收人姓名，例如：[“1”,”2”,”3”]
-					receiveManImgs: arrayToStr(temp0) //接收人头像
+					receiveManImgs: arrayToStr(temp3) //接收人头像
 				}
 				events.showWaiting();
 				//1.新增学校通知（同时增加通知未读）
@@ -509,10 +522,10 @@
 			function uploadFile(wd) {
 				var getUpTokenData = {
 					type: '0', //获取上传token的方式
-					appId: 6, //项目id
+					appId: 8, //项目id
 					fileArray: [], //文件数组
 					mainSpace: window.storageKeyName.QNPUBSPACE, //文件存放在私有空间或公有空间
-					uploadSpace: window.storageKeyName.NOTE, //上传的空间
+					uploadSpace: window.storageKeyName.XXTNOTICE, //上传的空间
 				}
 
 				if(multiMedia.data.PictureArray.length != 0) { //图片
@@ -531,12 +544,13 @@
 					}
 				}
 				uploadNum = getUpTokenData.fileArray.length; //记录上传的次数
-				console.log('uploadNum:' + uploadNum);
+//				console.log('uploadNum:' + uploadNum);
+//				console.log('getUpTokenData:' + JSON.stringify(getUpTokenData));
 				CloudFileUtil.getUpLoadTokens(getUpTokenData, function(data) {
-					//console.log("getUpLoadTokens " + JSON.stringify(data));
+//					console.log("getUpLoadTokens111111 " + JSON.stringify(data));
 					if(data.code == 1) {
-						console.log('上传配置 ' + JSON.stringify(data.configure));
-						console.log('上传凭证 ' + JSON.stringify(data.data));
+//						console.log('上传配置 ' + JSON.stringify(data.configure));
+//						console.log('上传凭证 ' + JSON.stringify(data.data));
 						QNUptoken = data.data; //token数据
 
 						if(multiMedia.data.PictureArray.length != 0) { //图片
@@ -548,7 +562,10 @@
 									var fileName = filePath[filePath.length - 1];
 									var fileId = fileName.split("_")[0];
 									if(multiMedia.data.PictureArray[j].id == fileId) {
-										multiMedia.data.PictureArray[j].domain = QNUptoken.Data[i].Domain + QNUptoken.Data[i].Key;
+//										console.log('QNUptoken.Data[i].Domain:'+QNUptoken.Data[i].Domain);
+//										console.log('+QNUptoken.Data[i].Key:'+QNUptoken.Data[i].Key);
+//										multiMedia.data.PictureArray[j].domain = QNUptoken.Data[i].Domain + QNUptoken.Data[i].Key;
+										multiMedia.data.PictureArray[j].domain = window.storageKeyName.QNPB + QNUptoken.Data[i].Key;
 									}
 								}
 							}
@@ -587,7 +604,7 @@
 						//开始执行上传任务
 						taskCreate(wd);
 					} else {
-						//console.log('### ERROR ### 获取上传凭证失败 ### ');
+//						console.log('### ERROR ### 获取上传凭证失败 ### ');
 						document.getElementById("finish").disabled = false;
 						wd.close();
 						mui.toast('上传失败 ' + data.message);
@@ -600,7 +617,7 @@
 			 */
 			function BatchDelete(paths, wd) {
 				var batchDelete = {
-					appId: 6, //int 必填 项目id
+					appId: 8, //int 必填 项目id
 					urls: paths //array 必填 需要获取下载token文件的路径
 				}
 				/**
@@ -635,6 +652,7 @@
 						var num; //记录第几个文件
 						if(multiMedia.data.PictureArray.length !== 0) { //图片
 							for(var k = 0; k < multiMedia.data.PictureArray.length; k++) {
+//								console.log('multiMedia.data:'+multiMedia.data.PictureArray[k].path);
 								var path = multiMedia.data.PictureArray[k].path.split("/");
 								var name = path[path.length - 1];
 								if(fileName == name) {
@@ -666,7 +684,7 @@
 						}
 						CloudFileUtil.upload(fPath, QNUptoken.Data[i].Token, QNUptoken.Data[i].Key, function(upload, status) {
 							//上传任务完成的监听
-							//console.log('上传任务完成' + status + '|' + JSON.stringify(upload));
+//							console.log('上传任务完成' + status + '|' + JSON.stringify(upload));
 							if(status == 200) {
 								//console.log('上传成功');
 								QNUptoken.Data[i].task = true;
