--- a/HomeSchoolInteraction/html/homeSchool/noticeDetail.html
+++ b/HomeSchoolInteraction/html/homeSchool/noticeDetail.html
@@ -187,7 +187,7 @@
 				</div>
 				<div class="" v-else-if="noticesDetail.NoticeEncAddr.length==2">
 					<ul class="mui-table-view mui-grid-view">
-						<li class="mui-table-view-cell mui-media" v-for="(picModel,index) in noticesDetail.NoticeEncAddr">
+						<li class="mui-table-view-cell mui-media mui-col-xs-5 mui-col-sm-5" v-for="(picModel,index) in noticesDetail.NoticeEncAddr">
 							<a href="#" class="img-box">
 								<img class="notice-two-img" data-preview-src="" :src=picModel ></a>
 						</li>
@@ -196,7 +196,7 @@
 				<div class="" v-else-if="noticesDetail.NoticeEncAddr.length>=3">
 					<ul class="mui-table-view mui-grid-view">
 						<li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-4" v-for="(picModel,index) in noticesDetail.NoticeEncAddr">
-							<a href="#" class="img-box">
+							<a href="#" class="img-box" style="margin: -10px 0 0 -20px;">
 								<img class="notice-more-img" data-preview-src="" :src=picModel></a>
 						</li>
 					</ul>
