--- a/HomeSchoolInteraction/html/homeSchool/mine.html
+++ b/HomeSchoolInteraction/html/homeSchool/mine.html
@@ -10,7 +10,7 @@
 
 		<link rel="stylesheet" href="../../css/mui.min.css">
 		<style>
-			body, 
+			body,
 			.mui-content {
 				background-color: #333;
 				color: #fff;
@@ -23,9 +23,6 @@
 			.mui-bar-nav~.mui-content {
 				padding: 0;
 			}
-			
-			
-			
 			
 			.title {
 				margin: 35px 15px 10px;
@@ -73,24 +70,37 @@
 			})
 
 			function closeMenu() {
-//				mui.fire(plus.webview.currentWebview().opener(), 'closeMinePage', {});
-//				store.remove(window.storageKeyName.PERSONALINFO);
-//				utils.mOpenWithData("../../html/login/loginIndex.html", {});
-				
+				//				mui.fire(plus.webview.currentWebview().opener(), 'closeMinePage', {});
+				//				store.remove(window.storageKeyName.PERSONALINFO);
+				//				utils.mOpenWithData("../../html/login/loginIndex.html", {});
+
+				//获取个人信息
+				var personal = store.get(window.storageKeyName.PERSONALINFO);
+				//解绑个推
+				var info = plus.push.getClientInfo();
+				var tempBindData = {
+					appId: info.appid,
+					alias: personal.utid,
+					cid: info.clientid
+				}
+				unbindPro(tempBindData, function function_name(data) {
+					if(data.RspCode == 0) {} else {}
+				});
+
 				//获取所有已打开的webview 实例————重新打开login.html————循环关闭页面
 				store.remove(window.storageKeyName.PERSONALINFO);
 				plus.webview.open('../../html/login/loginIndex.html');
 				var curr = plus.webview.currentWebview();
 				var wvs = plus.webview.all();
-				for (var i = 0, len = wvs.length; i < len; i++) {
-		            //关闭除login页面外的其他页面
-					if (wvs[i].getURL().indexOf('loginIndex.html')!=-1){
+				for(var i = 0, len = wvs.length; i < len; i++) {
+					//关闭除login页面外的其他页面
+					if(wvs[i].getURL().indexOf('loginIndex.html') != -1) {
 						continue;
 					}
 					plus.webview.close(wvs[i]);
 				}
 				curr.close();
-			} 
+			}
 
 			//左滑显示出来的菜单，只需监听右滑，然后将菜单关闭即可；在该菜单上左滑，不做任何操作；
 			window.addEventListener("swiperight", closeMenu);
