--- a/HomeSchoolInteraction/html/homeSchool/noticeList.html
+++ b/HomeSchoolInteraction/html/homeSchool/noticeList.html
@@ -41,12 +41,12 @@
 
 	<body style="background: white;">
 		<header class="mui-bar mui-bar-nav" style="background-color:#00CFBD;" id="tempVue">
-			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="color: white;"></a>
+			<a @click="muiback" class="mui-icon mui-icon-left-nav mui-pull-left" style="color: white;"></a>
 			<h1 class="mui-title" style="color: white;">学校通知</h1>
 			<a v-if="personal.appxxtservstat>0" @click="revoke()" class="mui-pull-right" style="color: white;font-size: 25px;margin-top: 10px;">+</a>
 		</header>
 		<div class="mui-content" id="noticelistData" style="margin-top: -40px;">
-			<ul class="mui-table-view" v-for="(noticeModel,index) in noticeArray"> 
+			<ul class="mui-table-view" v-for="(noticeModel,index) in noticeArray">
 				<li class="mui-table-view-cell" @click="clickNoticeList(noticeModel)">
 					<div class="mui-navigate-right">
 						<div id="" v-if="noticeModel.IsRead==0&&noticeModel.NoticeType==1">
@@ -76,8 +76,7 @@
 			</ul>
 		</div>
 
-
-			<!--<div class="mui-content" style="margin-top: -40px;">
+		<!--<div class="mui-content" style="margin-top: -40px;">
 			<ul class="mui-table-view">
 				<li class="mui-table-view-cell" >
 					<div class="mui-navigate-right">
@@ -171,8 +170,9 @@
 						model.IsRead = 1;
 						utils.mOpenWithData("../../html/homeSchool/noticeDetail.html", model);
 						//让首页的未读数减1
-						if (model.IsRead ==0&&mode.NoticeType ==1) {
-							mui.fire(plus.webview.currentWebview().opener(), 'readNoticeList', {});
+						if(model.IsRead == 0 && mode.NoticeType == 1) {
+							//设置app角标,flag=0直接设置角标数字，flag=1角标减1,falg=2角标加1
+							setBadgeNumber(1,0);
 						}
 					},
 					deleteNotice: function(noticeModel) {
@@ -208,6 +208,12 @@
 					revoke: function() {
 						console.log('add通知');
 						utils.mOpenWithData("../../html/homeSchool/notice_add.html", {});
+					},
+					muiback: function() {
+						//在主界面重新获取通知未读数
+						mui.fire(plus.webview.currentWebview().opener(), 'getNoticeNoReadCnt', {});
+						mui.back();
+						console.log('点击返回按钮');
 					}
 				}
 			});
@@ -227,8 +233,7 @@
 					mui('#noticelistData').pullRefresh().endPullupToRefresh(); //参数为true代表没有更多数据了。
 					mui('#noticelistData').pullRefresh().endPulldownToRefresh();
 					console.log('data:' + JSON.stringify(data));
-					//在主界面重新获取通知未读数
-					mui.fire(plus.webview.currentWebview().opener(), 'getNoticeNoReadCnt', {});
+
 					if(data.RspCode == 0) {
 						noticelistData.pageIndex++;
 						for(var i = 0; i < data.RspData.Data.length; i++) {
