--- a/HomeSchoolInteraction/html/login/firstPage.html
+++ b/HomeSchoolInteraction/html/login/firstPage.html
@@ -41,6 +41,9 @@
 	<script src="../../js/utils/storageutil.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../../js/utils/events.js"></script>
 	<script type="text/javascript">
+		mui.init({
+				statusBarBackground: '#00CFBD'
+			});
 		//		$(function() {
 		//			
 		//		});
@@ -73,6 +76,8 @@
 			}, false);
 			// 监听在线消息事件
 			plus.push.addEventListener("receive", function(msg) {
+				//设置app角标,flag=0直接设置角标数字，flag=1角标减1,falg=2角标加1
+				setBadgeNumber(2,0);
 				if(msg.aps) { // Apple APNS message
 					outSet("接收到在线APNS消息：");
 				} else {
@@ -181,6 +186,7 @@
 						}
 					});
 				} else {
+					setUUID();
 					mui.toast(data.RspTxt);
 				}
 			});
@@ -188,10 +194,9 @@
 		}
 
 		//从ios原生得到信息
-		var setUUID = function(tempStr) {
+		var setUUID = function() {
 			if(loginFlag == 0) {
 				store.set(window.storageKeyName.PUBLICPARAMETER, tempModel);
-				console.log('tempStr:' + tempStr);
 				//判断上次是否登录过，自动登录
 				var personal = store.get(window.storageKeyName.PERSONALINFO);
 				if(personal) {
