--- a/HomeSchoolInteraction/html/login/loginIndex.html
+++ b/HomeSchoolInteraction/html/login/loginIndex.html
@@ -23,21 +23,21 @@
 			<h1 class="mui-title" style="color: white;">登录</h1>
 		</header>
 		<div class="mui-content">
-			<div style="height: 200px;font-size: 25px;color: dodgerblue;padding: 100px 0px;text-align: center;">登录</div>
+			<div style="height: 200px;font-size: 25px;color: #00cfba;;padding: 100px 0px;text-align: center;">登录</div>
 			<div class="mui-input-row">
 				<label style="margin-top: -5px;"><image src="../../img/login/username.png" style="width: 30px;height: 30px;" /></label>
 				<input id='account' type="text" class="mui-input-clear mui-input" placeholder="请输入用户名">
 			</div>
-			<hr style=" height:1px;border:none;border-top:1px solid dodgerblue;margin: -12px 20px 5px 60px ;" />
+			<hr style=" height:1px;border:none;border-top:1px solid #00cfba;;margin: -12px 20px 5px 60px ;" />
 
 			<div class="mui-input-row ">
 				<label><image src="../../img/login/password.png" style="width: 30px;height: 30px;" /></label>
 				<input id='password' type="password" class="mui-input-clear mui-input " placeholder="请输入密码">
 			</div>
-			<hr style=" height:1px;border:none;border-top:1px solid dodgerblue;margin: -12px 20px 0px 60px ;" />
+			<hr style=" height:1px;border:none;border-top:1px solid #00cfba;;margin: -12px 20px 0px 60px ;" />
 
 			<div style="padding: 0px 20px;">
-				<button id='login' type="button" class="mui-btn mui-btn-block mui-btn-primary" style="background: #13b7f6; border:none; margin-top: 30px;">登录</button>
+				<button id='login' type="button" class="mui-btn mui-btn-block mui-btn-primary" style="background: #00cfba; border:none; margin-top: 30px;height: 40px;padding-top: 8px;">登录</button>
 			</div>
 		</div>
 	</body>
@@ -75,34 +75,34 @@
 			}
 //			setUUID();
 		});
-		document.addEventListener("plusready", function() {
-			message = document.getElementById("message");
-			// 监听点击消息事件
-			plus.push.addEventListener("click", function(msg) {
-				// 判断是从本地创建还是离线推送的消息
-				switch(msg.payload) {
-					case "LocalMSG":
-						outSet("点击本地创建消息启动：");
-						break;
-					default:
-						outSet("点击离线推送消息启动：");
-						break;
-				}
-				// 提示点击的内容
-				plus.ui.alert(msg.content);
-				// 处理其它数据
-				logoutPushMsg(msg);
-			}, false);
-			// 监听在线消息事件
-			plus.push.addEventListener("receive", function(msg) {
-				if(msg.aps) { // Apple APNS message
-					outSet("接收到在线APNS消息：");
-				} else {
-					outSet("接收到在线透传消息：");
-				}
-				logoutPushMsg(msg);
-			}, false);
-		}, false);
+//		document.addEventListener("plusready", function() {
+//			message = document.getElementById("message");
+//			// 监听点击消息事件
+//			plus.push.addEventListener("click", function(msg) {
+//				// 判断是从本地创建还是离线推送的消息
+//				switch(msg.payload) {
+//					case "LocalMSG":
+//						outSet("点击本地创建消息启动：");
+//						break;
+//					default:
+//						outSet("点击离线推送消息启动：");
+//						break;
+//				}
+//				// 提示点击的内容
+//				plus.ui.alert(msg.content);
+//				// 处理其它数据
+//				logoutPushMsg(msg);
+//			}, false);
+//			// 监听在线消息事件
+//			plus.push.addEventListener("receive", function(msg) {
+//				if(msg.aps) { // Apple APNS message
+//					outSet("接收到在线APNS消息：");
+//				} else {
+//					outSet("接收到在线透传消息：");
+//				}
+//				logoutPushMsg(msg);
+//			}, false);
+//		}, false);
 		document.getElementById("login").addEventListener('tap', function(event) {
 			console.log("登录");
 			var tempName = document.getElementById("account").value;
