--- a/HomeSchoolInteraction/html/homeSchool/homeSchoolIndex.html
+++ b/HomeSchoolInteraction/html/homeSchool/homeSchoolIndex.html
@@ -79,56 +79,56 @@
 			</div>
 			<div id="contentData">
 				<ul class="mui-table-view mui-grid-view mui-grid-9" style="background-color: white;padding-left: 7px;">
-					<li class="mui-table-view-cell mui-media  mui-col-sm-3" style="border: 0px;">
+					<li class="mui-table-view-cell mui-media  mui-col-sm-4 mui-col-xs-4" style="border: 0px;">
 						<a href="#" @click="clickFunction(0)">
 							<img class="circular-square" src="../../img/homeSchool/schoolPage0.png" />
 							<span v-if="NoReadCnt>0" class="mui-badge mui-btn-red">{{NoReadCnt}}</span>
 							<div class="mui-media-body divNameCss" style="">学校通知</div>
 						</a>
 					</li>
-					<li class="mui-table-view-cell mui-media  mui-col-sm-3" style="border: 0px;">
+					<li class="mui-table-view-cell mui-media  mui-col-sm-4 mui-col-xs-4" style="border: 0px;">
 						<a href="#" @click="clickFunction(1)">
 							<img class="circular-square" src="../../img/homeSchool/schoolPage1.png" />
 							<span class="mui-icon"></span>
 							<div class="mui-media-body divNameCss">学生表现</div>
 						</a>
 					</li>
-					<li class="mui-table-view-cell mui-media  mui-col-sm-3" style="border: 0px;">
+					<li class="mui-table-view-cell mui-media  mui-col-sm-4 mui-col-xs-4" style="border: 0px;">
 						<a href="#" @click="clickFunction(2)">
 							<img class="circular-square" src="../../img/homeSchool/schoolPage2.png" />
 							<span class="mui-icon"></span>
 							<div class="mui-media-body divNameCss">班级信息</div>
 						</a>
 					</li>
-					<li class="mui-table-view-cell mui-media  mui-col-sm-3" style="border: 0px;">
+					<li class="mui-table-view-cell mui-media  mui-col-sm-4 mui-col-xs-4" style="border: 0px;">
 						<a href="#" @click="clickFunction(3)">
 							<img class="circular-square" src="../../img/homeSchool/schoolPage3.png" />
 							<span class="mui-icon"></span>
 							<div class="mui-media-body divNameCss">荣誉展示</div>
 						</a>
 					</li>
-					<li class="mui-table-view-cell mui-media  mui-col-sm-3" style="border: 0px;">
+					<li class="mui-table-view-cell mui-media  mui-col-sm-4 mui-col-xs-4" style="border: 0px;">
 						<a href="#" @click="clickFunction(4)">
 							<img class="circular-square" src="../../img/homeSchool/schoolPage4.png" />
 							<span class="mui-icon"></span>
 							<div class="mui-media-body divNameCss">活动展示</div>
 						</a>
 					</li>
-					<li class="mui-table-view-cell mui-media  mui-col-sm-3" style="border: 0px;">
+					<li class="mui-table-view-cell mui-media  mui-col-sm-4 mui-col-xs-4" style="border: 0px;">
 						<a href="#" @click="clickFunction(5)">
 							<img class="circular-square" src="../../img/homeSchool/schoolPage5.png" />
 							<span class="mui-icon"></span>
 							<div class="mui-media-body divNameCss">作业管理</div>
 						</a>
 					</li>
-					<li class="mui-table-view-cell mui-media  mui-col-sm-3" style="border: 0px;">
+					<li class="mui-table-view-cell mui-media  mui-col-sm-4 mui-col-xs-4" style="border: 0px;">
 						<a href="#" @click="clickFunction(6)">
 							<img class="circular-square" src="../../img/homeSchool/schoolPage6.png" />
 							<span class="mui-icon"></span>
 							<div class="mui-media-body divNameCss">考试成绩</div>
 						</a>
 					</li>
-					<li class="mui-table-view-cell mui-media  mui-col-sm-3" style="border: 0px;">
+					<li class="mui-table-view-cell mui-media  mui-col-sm-4 mui-col-xs-4" style="border: 0px;">
 						<a href="#" @click="clickFunction(7)">
 							<img class="circular-square" src="../../img/homeSchool/schoolPage7.png" />
 							<span class="mui-icon"></span>
