--- a/HomeSchoolInteraction/html/homeSchool/mine.html
+++ b/HomeSchoolInteraction/html/homeSchool/mine.html
@@ -53,6 +53,7 @@
 			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/publicProtocolNew.js"></script>
 		<script src="../../js/storageKeyName.js"></script>
 		<script src="../../js/utils/store.js"></script>
 		<script src="../../js/utils/utils.js"></script>
