--- a/HomeSchoolInteraction/html/homeSchool/noticeDetail.html
+++ b/HomeSchoolInteraction/html/homeSchool/noticeDetail.html
@@ -162,7 +162,7 @@
 		</nav>
 		
 		<div class="mui-content" id="noticeDetailData" v-if="flag>0" style="background: white;">
-			<p style="color: black;padding: 10px;font-size: 14px;color: #333333;">{{noticesDetail.NoticeContent}}</p>
+			<p style="color: black;padding: 10px;font-size: 14px;color: #333333;word-break: break-all;">{{noticesDetail.NoticeContent}}</p>
 			<!--<p class="" style="height: 10px;background-color: #f2f2f2;"></p>-->
 			<div id="" v-show="noticesDetail.NoticeEncAddr.length>0">
 				<div class="" v-if="noticesDetail.NoticeEncAddr.length==1&&noticesDetail.encFlag==2">
