--- a/HomeSchoolInteraction/html/login/firstPage.html
+++ b/HomeSchoolInteraction/html/login/firstPage.html
@@ -77,7 +77,7 @@
 			// 监听在线消息事件
 			plus.push.addEventListener("receive", function(msg) {
 				//设置app角标,flag=0直接设置角标数字，flag=1角标减1,falg=2角标加1
-				setBadgeNumber(2,0);
+				utils.setBadgeNumber(2,0);
 				if(msg.aps) { // Apple APNS message
 					outSet("接收到在线APNS消息：");
 				} else {
